@@ -28,6 +28,8 @@ will now match the output of utilities like "df".
 New: Space usage test events and status now presents the usage using byte-based unit
 rather then blocks count.
 
+New: Provide more details for HTTP request errors.
+
 Fixed: Linux: Issue #142: fix the speed monitoring for 10Gb/s+ interfaces.
 
 Fixed: Issue #147: invalid total (up/down)load values.
